--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ function processLine() {
 		showtime = true;
 	}
 	var parsed = null;
-	try { parsed = parse(" " + partial + "; " + prompt.value); }
+	try { parsed = oK.parse(" " + partial + "; " + prompt.value); }
 	catch(error) {
 		if (oK.done() && (
 			error.message == "parse error. '}' expected." ||
